# FluidSvelte

./: .gitignore  README.md  app.py  increment.proto  llm.md  package-lock.json  pyproject.toml  test.fluid  test.py
examples/: counter.fluid  counter2.fluid  counter_derived.fluid  server.py  simple_counter.fluid
examples/counter/: counter.proto  counter_pb2.py  counter_pb2_grpc.py
src/compiler/: __init__.py  converter.py  error.py  parser.py  schema.py  state.py
src/compiler/generator/: python.py  svelte.py
src/utils/: file_utils.py  py_to_js.py
