[project]
name = "fluidsvelte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.69.0",
    "grpcio-tools>=1.69.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["test/test", "test"]
